--- a/eden-connect-react/src/components/ASide/PinTop/index.css
+++ b/eden-connect-react/src/components/ASide/PinTop/index.css
@@ -17,7 +17,7 @@
 .pin-top-article-image {
   border-radius: 0.5rem;
   width: 100%;
-  height: 7rem;
+  height: 100%;
 }
 
 .pin-top-article-image:hover {
