--- a/eden-connect-react/src/components/Header/index.css
+++ b/eden-connect-react/src/components/Header/index.css
@@ -25,3 +25,10 @@
 .logo-and-search {
   margin-bottom: -10px !important;
 }
+
+.logo-container {
+  position: absolute;
+  top: 10px;   /* Adjust this value to control the vertical position */
+  left: 20px;  /* Adjust this value to control the horizontal position */
+  z-index: 10; /* Ensure logo is above other elements */
+}
